[gd_scene load_steps=3 format=2]

[ext_resource path="res://PasswordManager/lock.png" type="Texture" id=1]
[ext_resource path="res://PasswordManager/PasswordManager.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Lock" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -200.0
margin_right = 96.0
margin_bottom = -8.0
texture = ExtResource( 1 )
expand = true

[node name="WebsiteLine" type="LineEdit" parent="."]
margin_left = 128.0
margin_top = 192.0
margin_right = 384.0
margin_bottom = 216.0

[node name="UserLIne" type="LineEdit" parent="."]
margin_left = 128.0
margin_top = 224.0
margin_right = 512.0
margin_bottom = 248.0

[node name="PasswordLine" type="LineEdit" parent="."]
margin_left = 128.0
margin_top = 256.0
margin_right = 384.0
margin_bottom = 280.0
secret = true

[node name="GenerateButton" type="Button" parent="."]
margin_left = 384.0
margin_top = 256.0
margin_right = 455.0
margin_bottom = 276.0
text = "Generate"

[node name="SearchButton" type="Button" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 455.0
margin_bottom = 212.0
text = "Search"

[node name="ShowButton" type="Button" parent="."]
margin_left = 464.0
margin_top = 256.0
margin_right = 509.0
margin_bottom = 276.0
text = "Show"

[node name="AddButton" type="Button" parent="."]
margin_left = 128.0
margin_top = 288.0
margin_right = 509.0
margin_bottom = 308.0
text = "Add"

[node name="WebsiteLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 121.0
margin_bottom = 206.0
text = "Website:"

[node name="EmailLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 224.0
margin_right = 104.0
margin_bottom = 238.0
text = "Email:"

[node name="PasswordLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 264.0
margin_right = 124.0
margin_bottom = 278.0
text = "Password:"

[node name="NoteLabel" type="Label" parent="."]
visible = false
margin_left = 128.0
margin_top = 328.0
margin_right = 509.0
margin_bottom = 342.0
text = "saved and password coppied to clipboard"
align = 1
